...
            </objects>
            <point key="canvasLocation" x="-2842" y="425"/>
        </scene>
        <!--问答-->
        <scene sceneID="Jsg-ym-w4n">
            <objects>
                <navigationController title="问答" id="uD4-7S-PQR" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="问答" image="QuestionIcon" selectedImage="QuestionIconSelected" id="GWH-m2-XgJ"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Suw-2V-JXI">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
...
            <point key="canvasLocation" x="-1444" y="75"/>
        </scene>
        <!--我-->
        <scene sceneID="ODJ-h5-2qG">
            <objects>
                <navigationController title="我" id="KyE-FT-7Gb" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="我的" image="SelfIcon" selectedImage="SelfIconSelected" id="lfh-hB-swk"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="A09-Y1-21J">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="sWZ-nR-ZiB" kind="relationship" relationship="rootViewController" id="t6v-a6-YC7"/>
...
                                                    <action selector="postMoment:" destination="Ifh-OG-Rav" eventType="touchUpInside" id="5NP-gE-Z5g"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dmD-aF-ZTS">
                                                <rect key="frame" x="104" y="0.0" width="35" height="33"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <state key="normal" title="文章">
                                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                </state>
                                                <connections>
                                                    <action selector="postArticle:" destination="Ifh-OG-Rav" eventType="touchUpInside" id="ffc-lD-e8I"/>
                                                </connections>
                                            </button>
...
            </objects>
            <point key="canvasLocation" x="-971.25" y="2655.6338028169016"/>
        </scene>
        <!--搜索-->
        <scene sceneID="s91-PU-0QG">
            <objects>
                <viewController storyboardIdentifier="SearchViewController" title="搜索" id="F0q-Bw-6tc" customClass="SearchViewController" customModule="Meow" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="5ac-1o-vf8"/>
                        <viewControllerLayoutGuide type="bottom" id="87b-oW-JA0"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="FFn-5v-OSr">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
...
                                <textInputTraits key="textInputTraits"/>
                            </searchBar>
                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zes-57-gRI">
                                <rect key="frame" x="40" y="120" width="240" height="128"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="历史记录" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q4k-db-cXX">
                                        <rect key="frame" x="8" y="0.0" width="70" height="21"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
...
                                <rect key="frame" x="40" y="220" width="240" height="57"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iZI-DB-3vp">
                                        <rect key="frame" x="8" y="19" width="224" height="30"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <state key="normal" title="清空历史记录"/>
                                        <connections>
                                            <action selector="clearHistory:" destination="F0q-Bw-6tc" eventType="touchUpInside" id="gd8-Ln-e7B"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
            </objects>
            <point key="canvasLocation" x="-1444" y="-649"/>
        </scene>
        <!--首页-->
        <scene sceneID="fXc-1Q-Gqg">
            <objects>
                <navigationController title="首页" id="gvw-Hl-tVF" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="首页" image="HomeIcon" selectedImage="HomeIconSelected" id="wNX-fw-NL1"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="mMf-zb-BP3">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
...
